fixed text alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import "https://js.arcgis.com/4.27/esri/themes/light/main.css";
 
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
